# rust-plant-watering-system

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: display.rs  main.rs  peripherals.rs  pump.rs  water_level_sensor.rs  yl_69.rs
