# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "probe-rs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
stm32f3xx-hal = { version = "0.9.2", features = ["ld", "rt", "stm32f303xc"] }
rtt-target = "0.4.0"
embedded-hal = "0.2.7"

# define to prevent error in main
[[bin]]
name = "probe-rs-test"
test = false
bench = false